--- a/app/app.html
+++ b/app/app.html
@@ -92,7 +92,7 @@
                     <img src="../assets/img/book/img_coupon_pc.png" alt="" class="pc">
                 </a>
                 <div class="btn_box">
-                    <a href="#a" class="btn_app puple">
+                    <a href="#a" class="btn_app purple">
                         <span class="right">시험접수 6.13(월) ~ 7.15(금)</span>
                     </a>
                     <a href="#a" class="btn_app orange">
@@ -127,7 +127,7 @@
                 </ul>
             </div>
             <div class="btn_wrap">
-                <a href="#a" class="btn_app puple">
+                <a href="#a" class="btn_app purple">
                     <span class="right">시험접수 6.13(월) ~ 7.15(금)</span>
                 </a>
                 <a href="#a" class="btn_app orange">
