--- a/app/apps1.html
+++ b/app/apps1.html
@@ -283,7 +283,7 @@
                 </label>
             </div>
 
-            <a href="#a" class="btn_app puple">
+            <a href="#a" class="btn_app purple">
                 <span class="right">접수하기</span>
             </a>
             
