--- a/app/apps2.html
+++ b/app/apps2.html
@@ -174,7 +174,7 @@
                 <li>한부모님은 <a href="#a">2022년 4월 6일, 환불 규정에 동의</a>하셨습니다.</li>
             </ul>
 
-            <a href="#a" class="btn_app puple">
+            <a href="#a" class="btn_app purple">
                 <span class="right">가상계좌 발급</span>
             </a>
             
