--- a/book/book.html
+++ b/book/book.html
@@ -92,7 +92,7 @@
                     <img src="../assets/img/book/img_coupon_pc.png" alt="" class="pc">
                 </a>
                 <div class="btn_box">
-                    <a href="#a" class="btn_app puple">
+                    <a href="#a" class="btn_app purple">
                         <span class="right">도서구입 6.7(화) ~ 7.29(금)</span>
                     </a>
                     <a href="#a" class="btn_app orange pc_f">
@@ -252,7 +252,7 @@
             </div>
             
 
-            <a href="#a" class="btn_app puple">
+            <a href="#a" class="btn_app purple">
                 <span class="right">도서구입 6.7(화) ~ 7.29(금)</span>
             </a>
 
