--- a/book/books1.html
+++ b/book/books1.html
@@ -231,7 +231,7 @@
                     <span>도서 교환 · 환불 규정에 동의</span>
                 </label>
             </div>
-            <a href="#a" class="btn_app puple">
+            <a href="#a" class="btn_app purple">
                 <span class="right">구입하기</span>
             </a>
 
