--- a/book/books2.html
+++ b/book/books2.html
@@ -218,7 +218,7 @@
                 <a href="#a" class="btn_app orange">
                     <span class="right">다른 배송지 추가 주문</span>
                 </a>
-                <a href="#a" class="btn_app puple">
+                <a href="#a" class="btn_app purple">
                     <span class="right">가상계좌 발급</span>
                 </a>
             </div>
