--- a/member/create.html
+++ b/member/create.html
@@ -108,7 +108,7 @@
                         <span>알림톡, SMS 수신 동의</span>
                     </label>
                 </div>
-                <button class="btn_submit puple"><span>회원가입</span></button>
+                <button class="btn_submit purple"><span>회원가입</span></button>
             </div>
         </section>
     </main>
