--- a/member/findid.html
+++ b/member/findid.html
@@ -90,7 +90,7 @@
                     <input type="text" class="text ico_user" placeholder="교사·학부모 이름 입력">
                     <input type="text" class="text ico_phone" placeholder="교사·학부모 휴대폰번호 입력">
                 </div>
-                <button class="btn_submit puple"><span>알림톡(SMS)으로 아이디 전송</span></button>
+                <button class="btn_submit purple"><span>알림톡(SMS)으로 아이디 전송</span></button>
                 <button class="btn_submit gray"><span>로그인</span></button>
             </div>
         </section>
