--- a/member/login.html
+++ b/member/login.html
@@ -93,7 +93,7 @@
                     <span></span>
                     <input type="password" class="text ico_pw" placeholder="영문, 숫자 포함 6자리 이상 비밀번호 입력">
                 </div>
-                <button class="btn_submit puple"><span>로그인</span></button>
+                <button class="btn_submit purple"><span>로그인</span></button>
                 <button class="btn_submit gray"><span>아이디 · 비밀번호 찾기</span></button>
             </div>
         </section>
