--- a/work.html
+++ b/work.html
@@ -157,7 +157,7 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 				<tr class="m04">
 					<td></td>
 					<td>주문수정</td>
-					<td><a href="" target="_blank">book/books3.html</a></td>
+					<td><a href="book/books3.html" target="_blank">book/books3.html</a></td>
 					<td class="ac">2022-02-15</td>
 					<td class="ac">book1복사 별도 퍼블리싱 불필요</td>
 				</tr>
@@ -207,8 +207,22 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 				<!-- result-->
 				<tr class="m06">
 					<td>결과발표</td>
-					<td></td>
+					<td>시상기준</td>
 					<td><a href="result/result.html" target="_blank">result/result.html</a></td>
+					<td class="ac"></td>
+					<td class="ac"></td>
+				</tr>
+				<tr class="m06">
+					<td></td>
+					<td>결과조회</td>
+					<td><a href="result/myresult.html" target="_blank">result/myresult.html</a></td>
+					<td class="ac"></td>
+					<td class="ac"></td>
+				</tr>
+				<tr class="m06">
+					<td></td>
+					<td>평가결과</td>
+					<td><a href="result/evaluation.html" target="_blank">result/evaluation.html</a></td>
 					<td class="ac"></td>
 					<td class="ac"></td>
 				</tr>
@@ -218,87 +232,60 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>내정보</td>
 					<td>도서주문조회 - 목록</td>
 					<td><a href="myinfo/mybook.html" target="_blank">myinfo/mybook.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>도서주문조회 - 상세</td>
 					<td><a href="myinfo/mybookview.html" target="_blank">myinfo/mybookview.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>접수확인 - 목록</td>
 					<td><a href="myinfo/myapp.html" target="_blank">myinfo/myapp.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>접수확인 - 상세</td>
 					<td><a href="myinfo/myappview.html" target="_blank">myinfo/myappview.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>응시표 - 목록</td>
 					<td><a href="myinfo/form.html" target="_blank">myinfo/form.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>응시표 - 상세</td>
 					<td><a href="myinfo/formview.html" target="_blank">myinfo/formview.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>시험환불 - 목록</td>
 					<td><a href="myinfo/refund.html" target="_blank">myinfo/refund.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m07">
 					<td></td>
 					<td>시험환불 - 상세</td>
 					<td><a href="myinfo/refundview.html" target="_blank">myinfo/refundview.html</a></td>
-					<td class="ac"></td>
-					<td class="ac"></td>
-				</tr>
-				<tr class="m07">
-					<td></td>
-					<td>결과 - 목록</td>
-					<td><a href="myinfo/myresult.html" target="_blank">myinfo/myresult.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-02-28</td>
 					<td class="ac"></td>
 				</tr>
-				<tr class="m07">
-					<td></td>
-					<td>결과 - 상세</td>
-					<td><a href="myinfo/myresultview.html" target="_blank">myinfo/myresultview.html</a></td>
-					<td class="ac"></td>
-					<td class="ac"></td>
-				</tr>
-				<tr class="m07">
-					<td></td>
-					<td>결과 - 평가지</td>
-					<td><a href="myinfo/evaluation.html" target="_blank">myinfo/evaluation.html</a></td>
-					<td class="ac"></td>
-					<td class="ac"></td>
-				</tr>
-				<tr class="m07">
-					<td></td>
-					<td>결과 - 평가지 인쇄</td>
-					<td><a href="myinfo/evaluation_p.html" target="_blank">myinfo/evaluation_p.html</a></td>
-					<td class="ac"></td>
-					<td class="ac"></td>
-				</tr>
-				<!-- 고객센터-->
+
+				<!-- 고객센터 -->
 				<tr class="m08">
 					<td>고객센터</td>
 					<td>공지사항 - 목록</td>
