--- a/work.html
+++ b/work.html
@@ -268,7 +268,14 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>응시표 - 상세</td>
 					<td><a href="myinfo/formview.html" target="_blank">myinfo/formview.html</a></td>
 					<td class="ac">2020-02-28</td>
-					<td class="ac"></td>
+					<td class="ac">모바일</td>
+				</tr>
+				<tr class="m07">
+					<td></td>
+					<td>응시표 - 상세</td>
+					<td><a href="myinfo/formview_p.html" target="_blank">myinfo/formview_p.html</a></td>
+					<td class="ac">2020-03-10</td>
+					<td class="ac">pc</td>
 				</tr>
 				<tr class="m07">
 					<td></td>
