결과 결과발표

--- a/work.html
+++ b/work.html
@@ -209,14 +209,14 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>결과발표</td>
 					<td>시상기준</td>
 					<td><a href="result/result.html" target="_blank">result/result.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-03-10</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m06">
 					<td></td>
 					<td>결과조회</td>
 					<td><a href="result/myresult.html" target="_blank">result/myresult.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-03-10</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m06">
