--- a/app/app.html
+++ b/app/app.html
@@ -102,7 +102,7 @@
             </div>
             <div class="flex_box_pc">
                 <div class="cont_wrap">
-                    <h2>2022년 도서구입 안내</h2>
+                    <h2>2022년 시험접수 안내</h2>
                     <ul class="text_list">
                         <li><b>접수 기간</b> : 6.7(화) ~ 7.29(금)</li>
                         <li><b>참 가 비</b> : 12,000원(할인쿠폰 적용 시 10,000원)</li>
