--- a/app/apps1.html
+++ b/app/apps1.html
@@ -153,13 +153,13 @@
                         <li>
                             <b>이름</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>생년월일</b>
                             <div>
-                                <input type="text" placeholder="8자리 입력 (예) 20101205">
+                                <input type="text" placeholder="8자리 입력 (예) 20101205" class="pc_300">
                             </div>
                         </li>
                         <li>
@@ -179,7 +179,7 @@
                         <li>
                             <b>학부모 휴대폰</b>
                             <div>
-                                <input type="number" placeholder="숫자만 입력">
+                                <input type="number" placeholder="숫자만 입력" class="pc_300">
                             </div>
                         </li>
                         <li>
@@ -226,7 +226,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td rowspan="2">강다니엘헤이츠</td>
+                                <td rowspan="2"><b>강다니엘헤이츠</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울연희초등학교</td>
                                 <td>12,000원</td>
@@ -237,7 +237,7 @@
                                 <td><a href="#a">삭제</a></td>
                             </tr>
                             <tr>
-                                <td rowspan="2">이영희</td>
+                                <td rowspan="2"><b>이영희</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울대학교사범대학 부설여자중학교</td>
                                 <td>12,000원</td>
@@ -263,6 +263,7 @@
                         <button class="btn_survey">한우리교사·센터 추천</button>
                         <button class="btn_survey">인터넷검색</button>
                         <button class="btn_survey">기타</button>
+                        <input type="text">
                     </div>
                 </div>
             </div>
@@ -391,7 +392,6 @@
 <aside class="layer_pop certification" id="certificationLayer">
     <p class="tit">한우리교사 인증</p>
     <button class="btn_closed" onclick="closePop('#certificationLayer');"></button>
-    <p class="t1">교사의 소속 지역센터 확인을 위해 정보를 입력해 주세요.</p>
     <div class="inner">
         <p class="t1">교사의 소속 지역센터 확인을 위해 정보를 입력해 주세요.</p>
         <ul class="input_form">
