--- a/app/apps2.html
+++ b/app/apps2.html
@@ -135,7 +135,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td rowspan="2">강다니엘헤이츠</td>
+                                <td rowspan="2"><b>강다니엘헤이츠</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울연희초등학교</td>
                                 <td>12,000원</td>
@@ -149,7 +149,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td rowspan="2">이영희</td>
+                                <td rowspan="2"><b>이영희</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울대학교사범대학 부설여자중학교</td>
                                 <td>12,000원</td>
