--- a/app/apps3.html
+++ b/app/apps3.html
@@ -134,13 +134,13 @@
                         <li>
                             <b>이름</b>
                             <div>
-                                <input type="text" value="한응시">
+                                <input type="text" value="한응시" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>생년월일</b>
                             <div>
-                                <input type="text" value="2010.12.05">
+                                <input type="text" value="2010.12.05" class="pc_300">
                             </div>
                         </li>
                         <li>
@@ -160,7 +160,7 @@
                         <li>
                             <b>학부모 휴대폰</b>
                             <div>
-                                <input type="text" value="010-1234-5555">
+                                <input type="text" value="010-1234-5555" class="pc_300">
                             </div>
                         </li>
                         <li>
