--- a/book/books1.html
+++ b/book/books1.html
@@ -142,13 +142,13 @@
                         <li>
                             <b>받으실분</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>휴대폰</b>
                             <div>
-                                <input type="text" placeholder="받으실분 휴대폰 번호 입력">
+                                <input type="text" placeholder="받으실분 휴대폰 번호 입력" class="pc_300">
                             </div>
                         </li>
                         <li>
