--- a/myinfo/form.html
+++ b/myinfo/form.html
@@ -86,14 +86,14 @@
         <section class="myinfo">
             <div class="cont_wrap">
                 <h2 class="m">응시표</h2>
-                <p class="info_txt">총<span>1</span>명</p>
+                <p class="info_txt">총 <span>1</span>명</p>
                 <div class="tbl">
                     <table>
                         <colgroup>
+                            <col style="width: auto;">
                             <col style="width: 20%;">
-                            <col style="width: 30%;">
-                            <col style="width: 30%;">
-                            <col style="width: 20%;">
+                            <col style="width: auto;">
+                            <col style="width: auto;">
                         </colgroup>
                         <thead>
                             <tr>
