--- a/myinfo/formview.html
+++ b/myinfo/formview.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="cont_wrap">
-                <h2>참가온라인 시험 유의사항</h2>
+                <h2>온라인 시험 유의사항</h2>
                 <ul class="text_list">
                     <li>시험 응시는 데스크탑, 노트북, 태블릿만 가능</li>
                     <li>모바일은 응시 불가</li>
