--- a/myinfo/myapp.html
+++ b/myinfo/myapp.html
@@ -86,7 +86,7 @@
         <section class="myinfo">
             <div class="cont_wrap">
                 <h2 class="m">접수확인</h2>
-                <p class="info_txt">미입금<span>1</span></p>
+                <p class="info_txt">미입금 <span>1</span></p>
                 <div class="tbl">
                     <table>
                         <colgroup>
@@ -98,8 +98,8 @@
                         <thead>
                             <tr>
                                 <th>주문일</th>
-                                <th>받는분</th>
-                                <th>금액</th>
+                                <th>이름</th>
+                                <th>참가비</th>
                                 <th>상세조회</th>
                             </tr>
                         </thead>
