--- a/myinfo/refund.html
+++ b/myinfo/refund.html
@@ -90,11 +90,11 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>이름</th>
+                                <th style="width: 25%;">이름</th>
                                 <th>참가부문</th>
                                 <th>참가비</th>
                                 <th>상태</th>
-                                <th>선택</th>
+                                <th style="width: 12%;">선택</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -137,25 +137,25 @@
                         <li>
                             <b>예금주</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>휴대폰</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>은행명</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_300">
                             </div>
                         </li>
                         <li>
                             <b>계좌번호</b>
                             <div>
-                                <input type="text">
+                                <input type="text" class="pc_460">
                             </div>
                         </li>
                         <li>
@@ -171,7 +171,7 @@
             <div class="cont_wrap">
                 <h2>참가비 환불 규정</h2>
                 <ul class="text_list">
-                    <li><b>교환·환불</b> : 6.13(월) ~ 7.15(금)</li>
+                    <li><b>전액 환불</b> : 6.13(월) ~ 7.15(금)</li>
                     <li><b>50% 환불</b> : 7.16(토) ~ 7.29(금)</li>
                     <li><b>환불 불가</b> : 7.30(토) 이후</li>
                     <li>환불금액 입금은  7~10일 소요됩니다.</li>
