--- a/myinfo/myappview.html
+++ b/myinfo/myappview.html
@@ -129,12 +129,12 @@
                             <tr>
                                 <th>참가부문</th>
                                 <th>학부모 휴대폰</th>
-                                <th>삭제</th>
+                                <th>상태</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td rowspan="2">강다니엘헤이츠</td>
+                                <td rowspan="2"><b>강다니엘헤이츠</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울연희초등학교</td>
                                 <td>12,000원</td>
@@ -142,10 +142,10 @@
                             <tr>
                                 <td>초등 3학년</td>
                                 <td>010-1234-5678</td>
-                                <td><a href="#a">삭제</a></td>
+                                <td><a href="#a">입금대기</a></td>
                             </tr>
                             <tr>
-                                <td rowspan="2">이영희</td>
+                                <td rowspan="2"><b>이영희</b></td>
                                 <td>2010.05.29</td>
                                 <td>서울대학교사범대학 부설여자중학교</td>
                                 <td>12,000원</td>
@@ -153,7 +153,7 @@
                             <tr>
                                 <td>중 1학년</td>
                                 <td>010-1234-5678</td>
-                                <td><a href="#a">삭제</a></td>
+                                <td><a href="#a">입금대기</a></td>
                             </tr>
                         </tbody>
                     </table>
