--- a/myinfo/refundview.html
+++ b/myinfo/refundview.html
@@ -134,7 +134,7 @@
                         <li>
                             <b>환불금액</b>
                             <div>
-                                <span>5,000원</span>
+                                <strong>5,000원</strong>
                             </div>
                         </li>
                     </ul>
@@ -143,7 +143,7 @@
             <div class="cont_wrap">
                 <h2>참가비 환불 규정</h2>
                 <ul class="text_list">
-                    <li><b>교환·환불</b> : 6.13(월) ~ 7.15(금)</li>
+                    <li><b>전액 환불</b> : 6.13(월) ~ 7.15(금)</li>
                     <li><b>50% 환불</b> : 7.16(토) ~ 7.29(금)</li>
                     <li><b>환불 불가</b> : 7.30(토) 이후</li>
                     <li>환불금액 입금은  7~10일 소요됩니다.</li>
