--- a/app/apps1.html
+++ b/app/apps1.html
@@ -262,7 +262,7 @@
                         <button class="btn_survey">지인</button>
                         <button class="btn_survey">한우리교사·센터 추천</button>
                         <button class="btn_survey">인터넷검색</button>
-                        <button class="btn_survey">기타</button>
+                        <button class="btn_survey" data-rel="etc">기타</button>
                         <input type="text">
                     </div>
                 </div>
