모바일 캡쳐

--- a/myinfo/formview.html
+++ b/myinfo/formview.html
@@ -18,124 +18,126 @@
 
 <div id="wrap">
     <main class="main">
-        <h1 class="form_tit">
-            제30회 독서올림피아드 응시표
-        </h1>
-        <section class="myinfo form">
-            <div class="cont_wrap">
-                <h2>응시자 정보</h2>
-                <div class="book_order_list">
-                    <ul>
-                        <li>
-                            <b>응시번호</b>
-                            <div>
-                                <span>2139-4-0186</span>
-                            </div>
-                        </li>
-                        <li>
-                            <b>응시자명</b>
-                            <div>
-                                <span>박준서 (2011.02.28)</span>
-                            </div>
-                        </li>
-                        <li>
-                            <b>응시부문</b>
-                            <div>
-                                <span>초등 4학년부</span>
-                            </div>
-                        </li>
-                        <li>
-                            <b>학교명</b>
-                            <div>
-                                <span>동백초등학교</span>
-                            </div>
-                        </li>
+        <div class="capture" style="overflow: auto; height: 100%;">
+            <h1 class="form_tit">
+                제30회 독서올림피아드 응시표
+            </h1>
+            <section class="myinfo form">
+                <div class="cont_wrap">
+                    <h2>응시자 정보</h2>
+                    <div class="book_order_list">
+                        <ul>
+                            <li>
+                                <b>응시번호</b>
+                                <div>
+                                    <span>2139-4-0186</span>
+                                </div>
+                            </li>
+                            <li>
+                                <b>응시자명</b>
+                                <div>
+                                    <span>박준서 (2011.02.28)</span>
+                                </div>
+                            </li>
+                            <li>
+                                <b>응시부문</b>
+                                <div>
+                                    <span>초등 4학년부</span>
+                                </div>
+                            </li>
+                            <li>
+                                <b>학교명</b>
+                                <div>
+                                    <span>동백초등학교</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="info_list">
+                        <li><a href="#a">응시부문, 생년월일 정보 확인 중요.</a> 오류 시 전화로 연락주세요.</li>
                     </ul>
                 </div>
-                <ul class="info_list">
-                    <li><a href="#a">응시부문, 생년월일 정보 확인 중요.</a> 오류 시 전화로 연락주세요.</li>
-                </ul>
-            </div>
-            <div class="cont_wrap">
-                <h2>신청자 정보</h2>
-                <div class="book_order_list">
-                    <ul>
-                        <li>
-                            <b>신청자</b>
-                            <div>
-                                <span>김영희 (010-9999-7777)</span>
-                            </div>
-                        </li>
+                <div class="cont_wrap">
+                    <h2>신청자 정보</h2>
+                    <div class="book_order_list">
+                        <ul>
+                            <li>
+                                <b>신청자</b>
+                                <div>
+                                    <span>김영희 (010-9999-7777)</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="cont_wrap">
+                    <h2>시험 일시 : <span>8/20(토)</span></h2>
+                    <div class="book_order_list">
+                        <ul>
+                            <li>
+                                <b>초 1~2학년부 <br class="m">중학생부</b>
+                                <div>
+                                    <span>오전 09:30 ~ 10:30</span>
+                                </div>
+                            </li>
+                            <li>
+                                <b>초 3~4학년부</b>
+                                <div>
+                                    <span>오전 11:30 ~ 12:30</span>
+                                </div>
+                            </li>
+                            <li>
+                                <b>초 5~6학년부</b>
+                                <div>
+                                    <span>오후 1:30 ~ 2:30</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="cont_wrap">
+                    <h2>사전테스트 일시 : <span>8/8(월)</span></h2>
+                    <div class="book_order_list">
+                        <ul>
+                            <li>
+                                <b>시간</b>
+                                <div>
+                                    <span>오전 8시, 저녁 8시 중 자율 선택</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="cont_wrap">
+                    <h2>온라인 시험 유의사항</h2>
+                    <ul class="text_list">
+                        <li>시험 응시는 데스크탑, 노트북, 태블릿만 가능</li>
+                        <li>모바일은 응시 불가</li>
+                        <li>사전테스트는 실제 시험에 응시할 기기로 접속</li>
+                        <li>사전테스트 미응시로 인한 시험 당일 오류 발생 등 불이익은 응시자에게 있음</li>
+                        <li>Chrom 인터넷 브라우저로 접속 권장</li>
+                        <li>시험 시작 5분 전까지 온라인 시험장 접속</li>
                     </ul>
                 </div>
-            </div>
-            <div class="cont_wrap">
-                <h2>시험 일시 : <span>8/20(토)</span></h2>
-                <div class="book_order_list">
-                    <ul>
-                        <li>
-                            <b>초 1~2학년부 <br class="m">중학생부</b>
-                            <div>
-                                <span>오전 09:30 ~ 10:30</span>
-                            </div>
-                        </li>
-                        <li>
-                            <b>초 3~4학년부</b>
-                            <div>
-                                <span>오전 11:30 ~ 12:30</span>
-                            </div>
-                        </li>
-                        <li>
-                            <b>초 5~6학년부</b>
-                            <div>
-                                <span>오후 1:30 ~ 2:30</span>
-                            </div>
-                        </li>
+                <div class="cont_wrap">
+                    <h2>온라인 시험장 접속 방법</h2>
+                    <ul class="text_list">
+                        <li>대회 홈페이지(www.독서올림피아드.kr) 접속</li>
+                        <li>온라인 시험장 접속 배너 클릭하여 입장</li>
                     </ul>
                 </div>
-            </div>
-            <div class="cont_wrap">
-                <h2>사전테스트 일시 : <span>8/8(월)</span></h2>
-                <div class="book_order_list">
-                    <ul>
-                        <li>
-                            <b>시간</b>
-                            <div>
-                                <span>오전 8시, 저녁 8시 중 자율 선택</span>
-                            </div>
-                        </li>
+                <div class="cont_wrap">
+                    <h2>온라인 시험장 로그인 방법</h2>
+                    <ul class="text_list">
+                        <li><b>ID</b> : 응시번호 (예: 1234-5-6789)</li>
+                        <li><b>PW</b> : 생년월일 8자리 (예: 20030510)</li>
                     </ul>
                 </div>
-            </div>
-            <div class="cont_wrap">
-                <h2>온라인 시험 유의사항</h2>
-                <ul class="text_list">
-                    <li>시험 응시는 데스크탑, 노트북, 태블릿만 가능</li>
-                    <li>모바일은 응시 불가</li>
-                    <li>사전테스트는 실제 시험에 응시할 기기로 접속</li>
-                    <li>사전테스트 미응시로 인한 시험 당일 오류 발생 등 불이익은 응시자에게 있음</li>
-                    <li>Chrom 인터넷 브라우저로 접속 권장</li>
-                    <li>시험 시작 5분 전까지 온라인 시험장 접속</li>
-                </ul>
-            </div>
-            <div class="cont_wrap">
-                <h2>온라인 시험장 접속 방법</h2>
-                <ul class="text_list">
-                    <li>대회 홈페이지(www.독서올림피아드.kr) 접속</li>
-                    <li>온라인 시험장 접속 배너 클릭하여 입장</li>
-                </ul>
-            </div>
-            <div class="cont_wrap">
-                <h2>온라인 시험장 로그인 방법</h2>
-                <ul class="text_list">
-                    <li><b>ID</b> : 응시번호 (예: 1234-5-6789)</li>
-                    <li><b>PW</b> : 생년월일 8자리 (예: 20030510)</li>
-                </ul>
-            </div>
-            <div class="myinfo_foot">
-                <a href="#a"><img src="../assets/img/logo.svg" alt="한우리 독서올림피아드"></a>
-            </div>
-        </section>
+                <div class="myinfo_foot">
+                    <a href="#a"><img src="../assets/img/logo.svg" alt="한우리 독서올림피아드"></a>
+                </div>
+            </section>            
+        </div>
         <a href="#a" class="btn_save m_f"><span>저장하기</span></a>
     </main>
 </div>
@@ -145,6 +147,7 @@
 
 <script defer src="../assets/js/jquery-3.4.1.min.js"></script>
 <script defer src="../assets/libs/swiper.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>    
 <script defer src="../assets/js/ui.js"></script>
 </body>
 </html>
