--- a/app/apps1.html
+++ b/app/apps1.html
@@ -142,7 +142,7 @@
             <div class="m banner_box">
                 <a href="#a">
                     <img srcset="../assets/img/app/img_coupon2@2x.png 2x,
-                    ../assets/apop/img/img_coupon2@3x.png 3x" src="../assets/img/app/img_coupon2@2x.png" alt="">
+                    ../assets/app/img/img_coupon2@3x.png 3x" src="../assets/img/app/img_coupon2@2x.png" alt="">
                 </a>
             </div>
 
@@ -236,6 +236,8 @@
                                 <td>010-1234-5678</td>
                                 <td><a href="#a">삭제</a></td>
                             </tr>
+                        </tbody>
+                        <tbody>
                             <tr>
                                 <td rowspan="2"><b>이영희</b></td>
                                 <td>2010.05.29</td>
