--- a/myinfo/refund.html
+++ b/myinfo/refund.html
@@ -33,45 +33,45 @@
         <section class="inner __nav">
             <ul>
                 <li>
-                    <a href="#a">대회안내</a>
+                    <a href="#a" data-rel="contest">대회안내</a>
                     <div class="sub_nav">
-                        <a href="#a">대회개요</a>
-                        <a href="#a">유의사항</a>
-                        <a href="#a">예시문제</a>
+                        <a href="#a" data-rel="info">대회개요</a>
+                        <a href="#a" data-rel="attention">유의사항</a>
+                        <a href="#a" data-rel="sample">예시문제</a>
                     </div>
                 </li>
                 <li>
-                    <a href="#a">도서구입</a>
+                    <a href="#a" data-rel="book">도서구입</a>
                 </li>
                 <li>
-                    <a href="#a">시험접수</a>
+                    <a href="#a" data-rel="app">시험접수</a>
                 </li>
                 <li>
-                    <a href="#a">결과발표</a>
+                    <a href="#a" data-rel="result">결과발표</a>
                 </li>
                 <li class="pc">
-                    <a href="#a">고객센터</a>
+                    <a href="#a" data-rel="customer">고객센터</a>
                     <div class="sub_nav">
-                        <a href="#a">공지사항</a>
-                        <a href="#a">자주묻는 질문</a>
+                        <a href="#a" data-rel="notice">공지사항</a>
+                        <a href="#a" data-rel="faq">자주묻는 질문</a>
                     </div>
                 </li>
                 <li class="pc">
-                    <a href="#a">한우리소개</a>
+                    <a href="#a" data-rel="hanuri">한우리소개</a>
                     <div class="sub_nav">
-                        <a href="#a">인사말</a>
-                        <a href="#a">설립목적</a>
-                        <a href="#a">연혁</a>
-                        <a href="#a">위치안내</a>
+                        <a href="#a" data-rel="greeting">인사말</a>
+                        <a href="#a" data-rel="purpose">설립목적</a>
+                        <a href="#a" data-rel="history">연혁</a>
+                        <a href="#a" data-rel="location">위치안내</a>
                     </div>
                 </li>
                 <li>
-                    <a href="#a">내정보</a>
+                    <a href="#a" data-rel="myinfo">내정보</a>
                     <div class="sub_nav">
-                        <a href="#a">도서주문조회</a>
-                        <a href="#a">접수확인</a>
-                        <a href="#a">응시표</a>
-                        <a href="#a">시험환불</a>
+                        <a href="#a" data-rel="mybook">도서주문조회</a>
+                        <a href="#a" data-rel="myapp">접수확인</a>
+                        <a href="#a" data-rel="form">응시표</a>
+                        <a href="#a" data-rel="refund">시험환불</a>                        
                     </div>
                 </li>
             </ul>
@@ -83,7 +83,7 @@
         <div class="tit">
             <h1>시험환불</h1>
         </div>
-        <section class="myinfo">
+        <section class="myinfo" id="myinfo_refund">
             <div class="cont_wrap">
                 <h2 class="m">시험환불</h2>
                 <div class="tbl">
