--- a/result/myresult.html
+++ b/result/myresult.html
@@ -89,9 +89,9 @@
                 <div class="tbl">
                     <table>
                         <colgroup>
-                            <col style="width: 20%;">
                             <col style="width: 30%;">
-                            <col style="width: 30%;">
+                            <col style="width: auto;">
+                            <col style="width: 15%;">
                             <col style="width: 20%;">
                         </colgroup>
                         <thead>
