--- a/work.html
+++ b/work.html
@@ -193,7 +193,7 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 				<tr class="m05">
 					<td></td>
 					<td>접수정보 수정</td>
-					<td><a href="" target="_blank">app/apps3.html</a></td>
+					<td><a href="app/apps3.html" target="_blank">app/apps3.html</a></td>
 					<td class="ac">2022-02-20</td>
 					<td class="ac">apps1 복사 / 별도 퍼블리싱 불필요</td>
 				</tr>
