--- a/app/apps3.html
+++ b/app/apps3.html
@@ -166,8 +166,9 @@
                         <li>
                             <b>참가비</b>
                             <div>
-                                <button type="button>" class="btn_coupon on">쿠폰적용 (15개)</button>
-                                <strong>12,000원</strong>
+                                <button type="button>" class="btn_coupon">쿠폰적용 (15개)</button>
+                                <input type="text" value="12,000">
+                                <span class="text">원</span>
                                 <span class="pc">쿠폰적용 버튼을 클릭하여 적용·해제할 수 있습니다.</span>
                             </div>
                         </li>
