--- a/myinfo/myapp.html
+++ b/myinfo/myapp.html
@@ -97,7 +97,7 @@
                         </colgroup>
                         <thead>
                             <tr>
-                                <th>주문일</th>
+                                <th>접수일</th>
                                 <th>이름</th>
                                 <th>참가비</th>
                                 <th>상세조회</th>
