--- a/app/apps3.html
+++ b/app/apps3.html
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <b>참가비</b>
-                            <div>
+                            <div class="coupon_box">
                                 <button type="button>" class="btn_coupon">쿠폰적용 (15개)</button>
                                 <input type="text" value="12,000">
                                 <span class="text">원</span>
