--- a/app/apps1.html
+++ b/app/apps1.html
@@ -184,9 +184,10 @@
                         </li>
                         <li>
                             <b>참가비</b>
-                            <div>
+                            <div class="coupon_box">
                                 <button type="button>" class="btn_coupon">쿠폰적용 (15개)</button>
-                                <strong>12,000원</strong>
+                                <input type="text" value="12,000">
+                                <span class="text">원</span>
                                 <span class="pc">쿠폰적용 버튼을 클릭하여 적용·해제할 수 있습니다.</span>
                             </div>
                         </li>
