--- a/myinfo/formview_p.html
+++ b/myinfo/formview_p.html
@@ -17,7 +17,7 @@
 <div class="bg_dimmed"></div>
 
 <div id="wrap">
-    <main class="main">
+    <main class="main _print">
         <h1 class="form_tit">
             제30회 독서올림피아드 응시표
         </h1>
@@ -132,7 +132,6 @@
                 <a href="#a"><img src="../assets/img/logo.svg" alt="한우리 독서올림피아드"></a>
             </div>
         </section>
-        <a href="#a" class="btn_save m_f"><span>저장하기</span></a>
     </main>
 </div>
 
