--- a/work.html
+++ b/work.html
@@ -223,7 +223,7 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td></td>
 					<td>평가결과</td>
 					<td><a href="result/evaluation.html" target="_blank">result/evaluation.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-03-17</td>
 					<td class="ac"></td>
 				</tr>
 				
