--- a/result/evaluation.html
+++ b/result/evaluation.html
@@ -87,25 +87,13 @@
                                 <b>백분위군</b>
                                 <div>
                                     <span>나군(상위 11~20%)</span>
-                                    <button class="btn"><span>용어설명보기</span></button>
+                                    <button class="btn _description"><span class="open">용어설명보기</span></button>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="cont_wrap">
-                    <h2>사전테스트 일시 : <span>8/8(월)</span></h2>
-                    <div class="book_order_list">
-                        <ul>
-                            <li>
-                                <b>시간</b>
-                                <div>
-                                    <span>오전 8시, 저녁 8시 중 자율 선택</span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                
                 <div class="cont_wrap">
                     <h2>온라인 시험 유의사항</h2>
                     <ul class="text_list">
