--- a/result/evaluation.html
+++ b/result/evaluation.html
@@ -92,6 +92,10 @@
                             </li>
                         </ul>
                     </div>
+
+                    <div class="description_wrap">
+                        
+                    </div>
                 </div>
                 
                 <div class="cont_wrap">
