수정반영 및 chart.js

--- a/myinfo/refund.html
+++ b/myinfo/refund.html
@@ -161,7 +161,7 @@
                         <li>
                             <b>환불금액</b>
                             <div>
-                                <strong>5,000원</strong>
+                                <strong><input type="text" size="6" maxlength="6" value="5,000"> 원</strong>
                             </div>
                         </li>
 
