--- a/app/apps1.html
+++ b/app/apps1.html
@@ -15,7 +15,10 @@
 </head>
 <body>
 <div class="bg_dimmed"></div>
-
+<div id="message_layer">
+    <img src='../assets/img/loading.svg'>
+    <p>접수 정보를 저장하고 있습니다. <br>잠시만 기다려 주세요.</p>
+</div>
 <div id="wrap">
     <!-- header -->
     <header class="header">
@@ -127,7 +130,12 @@
                                 </div>
                             </div>
                         </li>
-                        
+                        <li>
+                            <b>소속</b>
+                            <div>
+                                <input type="text" class="readonly" readonly value="우리학교">
+                            </div>
+                        </li>
                         <li>
                             <b>주소</b>
                             <div>
@@ -167,6 +175,9 @@
                             <div>
                                 <select name="" id="">
                                     <option value="">선택</option>
+                                    <option value="">선택1</option>
+                                    <option value="">선택2</option>
+                                    <option value="">선택3</option>
                                 </select>
                             </div>
                         </li>
@@ -185,7 +196,7 @@
                         <li>
                             <b>참가비</b>
                             <div class="coupon_box">
-                                <button type="button>" class="btn_coupon">쿠폰적용 (15개)</button>
+                                <button type="button>" class="btn_coupon">쿠폰적용 ( <input type="text" maxlength="2" value="15" size="2">개)</button>
                                 <input type="text" value="12,000">
                                 <span class="text">원</span>
                                 <span class="pc">쿠폰적용 버튼을 클릭하여 적용·해제할 수 있습니다.</span>
@@ -203,7 +214,7 @@
             </a>
             
             <div class="cont_wrap">
-                <h2>접수중인 응시자 <strong>(2명)</strong></h2>
+                <h2>접수중인 응시자 <strong>(<span>2</span>명)</strong></h2>
                 <div class="tbl">
                     <table>
                         <colgroup>
