고객센터 - 공지사항

--- a/work.html
+++ b/work.html
@@ -297,22 +297,22 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>고객센터</td>
 					<td>공지사항 - 목록</td>
 					<td><a href="cs/notice.html" target="_blank">cs/notice.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2020-03-21</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m08">
 					<td></td>
-					<td>공지사항 - 목록</td>
+					<td>공지사항 - 보기</td>
 					<td><a href="cs/noticeview.html" target="_blank">cs/noticeview.html</a></td>
 					<td class="ac"></td>
-					<td class="ac"></td>
+					<td class="ac">2020-03-21</td>
 				</tr>
 				<tr class="m08">
 					<td></td>
 					<td>자주묻는질문</td>
 					<td><a href="cs/faq.html" target="_blank">cs/faq.html</a></td>
 					<td class="ac"></td>
-					<td class="ac"></td>
+					<td class="ac">2020-03-21</td>
 				</tr>
 
 				<!-- 한우리소개-->
